# load-generator

./: .gitignore  Asset-Meter.csv  Complete-Asset-Meter.csv  GRACEFUL_SHUTDOWN_TEST.md  README.md  pyproject.toml  pytest.ini  python-mqtt-benchmark.md  step-by-step.md  test_config.yaml
.claude/: CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: slot-planner-30min-gap.md
.planning/debug/resolved/: event-distribution-per-meter.md
.planning/phases/01-input-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-publishing-engine/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  (+13 more)
.planning/research/: FEATURES.md  STACK.md
scenarios/: scenario_10k.yaml  scenario_1k.yaml  scenario_5k.yaml  test_custom_base_time.yaml
src/: __init__.py
src/aegis_loadgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/loadgen/: __init__.py  __main__.py  cli.py  config.py  csv_reader.py  mqtt_client.py  payload.py  publisher.py  rate_limiter.py  retry_policy.py  slot_planner.py  worker_pool.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_csv_loader.py  test_integration_base_time.py  test_mqtt_client.py  test_payload_factory.py  test_publisher.py  test_publisher_shutdown.py  test_publisher_slot_distribution.py  test_rate_limiter.py  test_retry_policy.py  test_scenarios.py  test_slot_planner.py  test_uniqueness.py  test_worker_pool.py
(+11 files in other folders)
